<resources>
    <string name="app_name">Note It</string>
    <string name="Title">NoTe It</string>
    <string name="singUp">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="existingUserText">Already have account?</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_note">save note</string>
</resources>